(ifeat18n): 优化国际化支持并添加取消按钮文案- 在 ConvertDialog 和 MainDialog 中添加取消按钮，并设置国际化文案- 在 DebugToolsBundle.properties 和 DebugToolsBundle_zh.properties 中添加新的国际化文案 - 优化 GlobalParamPanel 中的 UI 组件初始化和刷新逻辑 - 在 LanguageUtils 中添加 GlobalParamPanel 的刷新逻辑